FD-58 CR changes - fix space in "reas chers"; text line-height, sizes, & spacing

--- a/site/assets/styles/scss/_theme.scss
+++ b/site/assets/styles/scss/_theme.scss
@@ -6,6 +6,7 @@ $gray-100: #F3EFEF;
 $gray-300: #D7D7D7;
 $gray-500: #A9A8A8;
 $gray-600: #6D6D6D;
+$gray-700: #444444;
 $gray-900: #242425; // body text
 
 /* Theme colors */
@@ -26,8 +27,10 @@ $font-family-monospace: "Source Code Pro", SFMono-Regular, Menlo, Monaco, Consol
 $display-font-family: "brandon-grotesque", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif;
 $display-font-weight: 700;
 $font-size-base: .875rem; // 14px
+$line-height-base: 1.73;
 $lead-font-size: 1rem;
 $lead-font-weight: 500;
+$text-muted: $gray-700;
 $btn-font-weight: 700;
 $h1-font-size: 3rem;
 $h2-font-size: 2.625rem;
